--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<input class="input100" type="text" name="email" placeholder="Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
+							<i class="" aria-hidden="true"></i>
 						</span>
 					</div>
 
